@@ -31,14 +31,19 @@ import org.jamocha.rete.ValueParam;
 
 /**
  * @author Peter Lin
+ * Modified 22/5/21 - DAve Woodman. Returns 1-based index or false if not found (as CLIPS)
+ *   args now [string to find] [string to search]
  *
  */
 public class StringIndexFunction implements Function, Serializable {
 
-	public static final String STRING_INDEX = "str-index";
 	/**
 	 * 
 	 */
+	private static final long serialVersionUID = 1L;
+	
+	public static final String STRING_INDEX = "str-index";
+
 	public StringIndexFunction() {
 		super();
 	}
@@ -58,14 +63,20 @@ public class StringIndexFunction implements Function, Serializable {
 				BoundParam bp = (BoundParam)params[1];
 				bp.resolveBinding(engine);
 			}
-			String val = params[0].getStringValue();
-			String pt = params[1].getStringValue();
+			String pt = params[0].getStringValue();
+			String val = params[1].getStringValue();
 			index = val.indexOf(pt);
 		}
 		DefaultReturnVector ret = new DefaultReturnVector();
-		DefaultReturnValue rv = new DefaultReturnValue(
-				Constants.INTEGER_OBJECT, new Integer(index));
-		ret.addReturnValue(rv);
+		if (index == -1) {
+			DefaultReturnValue rv = new DefaultReturnValue(
+					Constants.BOOLEAN_OBJECT, Boolean.FALSE);
+			ret.addReturnValue(rv);
+		} else {
+			DefaultReturnValue rv = new DefaultReturnValue(
+					Constants.INTEGER_OBJECT, Integer.valueOf(++index));
+			ret.addReturnValue(rv);
+		}
 		return ret;
 	}
 
@@ -73,12 +84,13 @@ public class StringIndexFunction implements Function, Serializable {
 		return STRING_INDEX;
 	}
 
+	@SuppressWarnings("rawtypes")
 	public Class[] getParameter() {
 		return new Class[]{ValueParam.class,ValueParam.class};
 	}
 
 	public String toPPString(Parameter[] params, int indents) {
-		return "(str-index [string] [pattern])";
+		return "(str-index [string to find] [string to search]])";
 	}
 
 }
