@@ -2,7 +2,6 @@ package woolfel.examples.model;
 
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
-import java.io.Serializable;
 import java.util.ArrayList;
 
 /**
@@ -11,6 +10,12 @@ import java.util.ArrayList;
  */
 public class GroupTransaction extends Security {
 
+	/**
+	 * 
+	 */
+	private static final long serialVersionUID = 1L;
+	
+	
 	protected String[] accountIds = null;
 	protected double buyPrice;
 	protected String purchaseDate = null;
@@ -18,7 +23,8 @@ public class GroupTransaction extends Security {
 	protected double total;
 	protected String transactionId = null;
 	
-    protected ArrayList listeners = new ArrayList();
+    @SuppressWarnings("rawtypes")
+	protected ArrayList listeners = new ArrayList();
 
     public GroupTransaction() {
 		super();
@@ -38,9 +44,9 @@ public class GroupTransaction extends Security {
     
     public void setBuyPrice(double price) {
     	if (price != this.buyPrice) {
-    		Double old = new Double(this.buyPrice);
+    		Double old = Double.valueOf(this.buyPrice);
     		this.buyPrice = price;
-    		this.notifyListener("buyPrice",old,new Double(this.buyPrice));
+    		this.notifyListener("buyPrice",old, Double.valueOf(this.buyPrice));
     	}
     }
     
@@ -62,9 +68,9 @@ public class GroupTransaction extends Security {
     
     public void setShares(double shares) {
     	if (shares != this.shares) {
-    		Double old = new Double(this.shares);
+    		Double old = Double.valueOf(this.shares);
     		this.shares = shares;
-    		this.notifyListener("shares",old,new Double(this.shares));
+    		this.notifyListener("shares",old, Double.valueOf(this.shares));
     	}
     }
     
@@ -74,9 +80,9 @@ public class GroupTransaction extends Security {
     
     public void setTotal(double value) {
     	if (value != this.total) {
-    		Double old = new Double(this.total);
+    		Double old = Double.valueOf(this.total);
     		this.total = value;
-    		this.notifyListener("total",old,new Double(this.total));
+    		this.notifyListener("total",old, Double.valueOf(this.total));
     	}
     }
     
@@ -96,7 +102,8 @@ public class GroupTransaction extends Security {
     	return this.transactionId;
     }
 
-    public void addPropertyChangeListener(PropertyChangeListener listener){
+    @SuppressWarnings("unchecked")
+	public void addPropertyChangeListener(PropertyChangeListener listener){
         this.listeners.add(listener);
     }
     
